--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+
+
+
+
+
+
 body{
-    height: 100vh;
-    background-color: whitesmoke;
+    height: 96vh;
+    background-color:rgb(231, 230, 230);
     display:flex;
     align-items: center ;
     justify-content: center;
+    border:3.5px solid black;
    
 }
 
@@ -13,18 +20,82 @@ body{
     max-width:375px;
     color:white;
     text-align: center;
-    height:150px;
+    height:170px;
     margin-top: auto;
     display: flex;
-    box-shadow:0px 0px 10px 0px lightgray;
     align-items: center;
     justify-content: center;
     overflow:none;
+    border-radius: 30px;
+    font-size: 17px;
+    
   
 }
-h2{
-    color:whitesmoke;
+h3{
+    
+    font-family: monospace;
+    font-size:20px;
+    
 }
 .card-content{
     margin:auto;
+}
+p{
+    color:red;
+}
+header{
+    width:370px;
+    height:50px;
+    background-color:brown;
+    color:lightgray;
+    
+    text-align:justify;
+    
+    font-size:50px;
+
+}
+li{
+    float:left;
+    width:380px;
+    height:50px;
+    background-color:brown;
+    color:whitesmoke;
+    text-align: justify;
+    margin-bottom: 17vh;
+    font-size:20px;
+    display:flex;
+    justify-content: space-evenly;
+    
+
+}
+a{
+    color:whitesmoke;
+    text-decoration:none;
+    font-family: monospace;
+    font-size:17px;
+    
+    
+
+}
+button{
+    background-color:brown;
+    padding:15px 15px;
+    overflow: none;
+    cursor:pointer;
+    border:none
+}
+
+button:hover{
+    box-shadow:0px 0px 4px 0px brown;
+    background-color:black;
+    color:whitesmoke;
+}
+
+footer{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 0px;
+    margin-top: 20vh;
+    padding:0px;
+    
 }
